@@ -36,6 +36,7 @@ Version 1.1.0 (released ??-???-????)
   * hide CVS files when viewing tags/branches on which they don't exist
   * allow hiding of errorful entries from the directory view (issue #105)
   * fix directory view sorting UI
+  * tolerate malformed Accept-Language headers (issue #396)
 
 Version 1.0.7 (released 14-Oct-2008)
 
